# wolf-sv-parser

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  Makefile  README.md  env.sh.template  grh.json  grh.sv  pyproject.toml
app/: json_emit_verilator_repcut_package.cpp
app/cli/: main.cpp
app/pybind/: wolvrix_native.cpp
app/pycli/: wolvrix_native.cpp
app/tools/: hdlbits_grhsim_driver.cpp
app/wolvrix/: main.cpp
docs/: GRH-JSON-spec.md  GRH-representation.md  graph.md  hdlbits-output-review.md  overview.md  xs-refill-diff-20260218.md
docs/TODO/: elaborate.md
docs/c910/: c910_diff_report.md  case003.md  case_006_fix_report.md  case_008_fix_report.md  case_012_fix_report.md  case_014_fix_report.md  case_016_fix_report.md  case_019_fix_report.md  case_020_fix_report.md  case_026_fix_report.md  case_029_ifu_stall_report.md  case_030_fix_report.md  case_031_fix_report.md  case_032_fix_report.md  openc910调试方案.md  verilator_warnings.md
docs/convert/: convert-architecture.md  convert-kimi.md  convert-progress.md  convert-workflow.md  convert.md
docs/draft/: wolvrix-app-plan.md
docs/dummy/: overview.md  structure-refactor.md
docs/elaborate/: feat001-inout-support.md  lhs-converter.md  memo.md  okr-codex.md  okr.md  phase1-report.md  phase11-report.md  phase12-report.md  phase13-report.md  phase14-report.md  phase15-report.md  phase16-report.md  phase17-report.md  phase19-report.md  phase2-report.md  phase21-report.md  phase22-report.md  phase26-report.md  phase3-report.md  phase4-report.md  phase5-report.md  phase6-report.md  plan.md  process-always-comb.md  workflow.md
docs/elaborate-old/: architecture.md  lhs-converter.md  memo.md  phase1-design-review.md  phase1-report.md  phase10-report.md  phase11-report.md  phase15-report.md  phase18-report.md  phase2-report.md  phase20-report.md  phase21-report.md  phase23-report.md  phase24-report.md  phase25-report.md  phase5-report.md  phase7-report.md  phase8-report.md  phase9-report.md
docs/emit/: grhsim-xiangshan-width.md  okr-codex.md  okr.md  phase1-report.md  phase2-report.md  phase3-report.md  phase4-report.md
docs/grh/: declared-symbols-plan.md  dlatch_support_request.md  grh-api.md  grh-ir-old.md  grh-ir.md  grh-json-spec.md  grh-progress.md  ir-hot-path-design.md  ir-memory-register-port-refactor.md  obj2-report.md  obj3-report.md  obj4-report.md  obj5-report.md  obj6-report.md  okr-codex.md  okr.md
docs/hdlbits/: dut_014.md  dut_018.md  dut_026.md  dut_040.md  dut_086.md  dut_097_098.md  dut_125.md  dut_136.md
docs/ingest/: initial-block-support.md
docs/python/: python-binding-architecture.md  session-binding-redesign.md
docs/slang-rationale/: slang-flow.md
docs/transform/: README.md  activity-schedule.md  blackbox-guard.md  comb-loop-elim.md  const-fold.md  const_fold.md  dead-code-elim.md  hier-flatten.md  instance-inline.md  latch-transparent-read.md  memory-init-check.md  multidriven-guard.md  okr-codex.md  okr.md  pass-guide.md  phase2-report.md  redundant-elim.md  repcut-port-merge.md  repcut.md  simplify.md  slice-index-const.md  stats.md  strip-debug.md  trigger-key-driven-schedule.md  xmr-resolve.md
docs/xs/: waveform_and_maxcycle_plan.md  xs_bugcase_001.md  xs_bugcase_002.md  xs_bugcase_003.md  xs_bugcase_004.md  xs_bugcase_006.md  xs_bugcase_016.md  xs_wave_diff_20260213.md  xs_wave_diff_20260213_190024.md  xs_wave_diff_20260214_155522.md  xs_wave_diff_20260214_190529.md  xs_wave_diff_20260214_220725.md  xs_wave_diff_20260215.md  xs_wave_diff_20260216_221813.md  xs_wave_diff_20260217.md  xs_wave_diff_20260217_223427.md
include/: convert.hpp  elaborate.hpp  emit.hpp  graph.hpp  grh.hpp  grh_symbol_utils.hpp  load.hpp  logging.hpp  transform.hpp
include/core/: diagnostics.hpp  emit.hpp  grh.hpp  ingest.hpp  load.hpp  logging.hpp  store.hpp  toposort.hpp  transform.hpp
include/emit/: grhsim_cpp.hpp  system_verilog.hpp  verilator_repcut_package.hpp
include/pass/: README.md  const_fold.hpp  const_inline.hpp  dead_code_elim.hpp  demo_stats.hpp  grh_verify.hpp  memory_init_check.hpp  output_assign_inline.hpp  redundant_elim.hpp  xmr_resolve.hpp
include/transform/: activity_schedule.hpp  blackbox_guard.hpp  comb_lane_pack.hpp  comb_loop_elim.hpp  const_fold.hpp  dead_code_elim.hpp  demo_stats.hpp  hier_flatten.hpp  hrbcut.hpp  instance_inline.hpp  latch_transparent_read.hpp  mem_to_reg.hpp  memory_init_check.hpp  memory_read_retime.hpp  merge_reg.hpp  multidriven_guard.hpp  record_slot_repack.hpp  redundant_elim.hpp  repcut.hpp  repcut_boundary_bundle.hpp  repcut_port_merge.hpp  scalar_memory_pack.hpp  simplify.hpp  slice_index_const.hpp  strip_debug.hpp  trigger_key_driven_schedule.hpp  xmr_resolve.hpp
lib/core/: diagnostics.cpp  emit.cpp  grh.cpp  ingest.cpp  load.cpp  store.cpp  toposort.cpp  transform.cpp
lib/emit/: grhsim_cpp.cpp  system_verilog.cpp  verilator_repcut_package.cpp
lib/include/: diagnostics.hpp  emit.hpp  grh.hpp  ingest.hpp  load.hpp  store.hpp  transform.hpp
lib/src/: diagnostics.cpp  emit.cpp  grh.cpp  ingest.cpp  load.cpp  store.cpp  transform.cpp
lib/transform/: README.md  activity_schedule.cpp  blackbox_guard.cpp  comb_lane_pack.cpp  comb_loop_elim.cpp  const_fold.cpp  dead_code_elim.cpp  demo_stats.cpp  hier_flatten.cpp  hrbcut.cpp  instance_inline.cpp  latch_transparent_read.cpp  mem_to_reg.cpp  memory_init_check.cpp  memory_read_retime.cpp  merge_reg.cpp  multidriven_guard.cpp  record_slot_repack.cpp  redundant_elim.cpp  repcut.cpp  repcut_port_merge.cpp  scalar_memory_pack.cpp  simplify.cpp  slice_index_const.cpp  strip_debug.cpp  trigger_key_driven_schedule.cpp  xmr_resolve.cpp
skills/convert-develop/: SKILL.md
src/: convert.cpp  elaborate.cpp  emit.cpp  grh.cpp  load.cpp  main.cpp  transform.cpp
src/pass/: CMakeLists.txt  const_fold.cpp  const_inline.cpp  dead_code_elim.cpp  demo_stats.cpp  grh_verify.cpp  memory_init_check.cpp  output_assign_inline.cpp  redundant_elim.cpp  xmr_resolve.cpp
testcase/t0/: t0.json  t0.sv
testcase/t1/: t1.json  t1.sv
testcase/t2/: t2.json  t2.sv
testcase/t3/: t3.json  t3.sv
tools/: fst_diff_tool.py
(+393 files in other folders)
